fix(*): add z-index for nav on desktop
add z-index on nav to get rid of the links that are generated because
of javascript

fix #25

--- a/css/style.css
+++ b/css/style.css
@@ -1789,6 +1789,7 @@ footer {
     width: 100%;
     opacity: 0;
     height: 0;
+    z-index: -99;
     background: none;
   }
   .menu-desk {
