--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -329,6 +329,7 @@ footer {
 		 width: 100%;
 		 opacity: 0;
 		 height: 0;
+		 z-index: -99; 
 		 background: none;
 	 }
 	
